--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -36,14 +36,13 @@
 <p>资料更新时间：2025年7月6日晚上11时10分</p>
 <p>责任编辑：李玲</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543720.md#1">台风木恩生成 气象专家：续观察菲东热带扰动</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545086.md#1">台风丹娜丝逼近 台湾发海警 明后天影响最大</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545397.md#1">台风丹娜丝来袭 屏东海口祭延期</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545404.md#1">台风丹娜丝逼近 南水分署防汛准备就绪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
